fix on IE displaying

--- a/omega-services/public/stylesheets/service.css
+++ b/omega-services/public/stylesheets/service.css
@@ -122,8 +122,8 @@
 }
 
 .service_customization_form li {padding:5px 0px;}
-.service_customization_form li label{ font-size:13px; text-align:right; float:left; display:block; width:150px; line-height: 100%; margin:10px 10px 0px 20px; }
-.service_customization_form li input{ display:block;}
+.service_customization_form li label{ font-size:13px; text-align:right; float:left; display:block; width:150px; line-height: 100%; margin:10px 10px 0px 20px; text-transform:none;}
+.service_customization_form li input{ display:block; font:-webkit-small-control;}
 .service_customization_form li textarea{ display:block;}
 .service_customization_form li select{ display:block; width:280px; height:30px;}
 .service_customization_form.editable_list li:hover {cursor:move; background-color: #bbb}
@@ -143,7 +143,7 @@
 .item-list-actions-wrapper{ right:42px; }
 .service_form_builder_tabs .tab_content li:hover .item-list-actions-wrapper {display:block;}
 #admin-edit-em input[type="text"] { width:90%; font-size:14px;}
-#admin-edit-em textarea {width:100%; height:100px;}
+#admin-edit-em textarea {width:96%; height:100px;}
 /* end app-spec */
 
 
@@ -248,9 +248,10 @@
     color:#555;
     margin:10px 5px 0px 0px
 }
-.service_sections_recurrence_interval input{
+.service_sections_recurrence_interval .numeric{
     float:left;
     width:30px;
+    padding:3px;
     font-size:13px;
     line-height: 100%;
     font-weight:bold;
